# stats

./: Makefile.am  README  configure.ac  kroki-stats.spec.in
src/: Makefile.am  kroki-stats.c  libkroki-stats.c  pthread_weak.c  pthread_weak.h  stats_file.h  syscall.c  syscall.h
src/kroki/: stats.h
src/kroki/bits/: module.h  stats-module.h
test/: Makefile.am  stats.c  stats.sh
